--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
   "repository": "https://github.com/asmanoor17/rails_1.git",
   "license": "MIT",
   "dependencies": {
-    "jquery": "^3.7.1"
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@rails/webpacker": "5.4.4",
+    "dotenv": "^16.3.1",
+    "jquery": "^3.7.1",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.27"
+    "@types/jquery": "^3.5.27",
+    "webpack-dev-server": "^3"
   }
 }
